src/main/java/com/perez/jaroslav/compiler/antlr/C2asmParser.java
// Generated from C:/Users/Jarek/IdeaProjects/C2AsmCompiler\C2asm.g4 by ANTLR 4.7

package com.perez.jaroslav.compiler.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class C2asmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, IDENTIFIER=80, 
		CHARACTER_LITERAL=81, STRING_LITERAL=82, HEX_LITERAL=83, DECIMAL_LITERAL=84, 
		OCTAL_LITERAL=85, FLOATING_POINT_LITERAL=86, WS=87, LINE_COMMENT=88, BLOCK_COMMENT=89;
	public static final int
		RULE_compilationUnit = 0, RULE_external_declaration = 1, RULE_function_definition = 2, 
		RULE_preprocessor_directive = 3, RULE_include = 4, RULE_header_file = 5, 
		RULE_define = 6, RULE_declaration = 7, RULE_function_declaration = 8, 
		RULE_variable_declaration = 9, RULE_declaration_specifiers = 10, RULE_variable_init_declarator_list = 11, 
		RULE_init_declarator = 12, RULE_storage_class_specifier = 13, RULE_type_specifier = 14, 
		RULE_struct_specifier = 15, RULE_struct = 16, RULE_struct_declaration_list = 17, 
		RULE_struct_declaration = 18, RULE_specifier_qualifier_list = 19, RULE_struct_declarator_list = 20, 
		RULE_struct_declarator = 21, RULE_enum_specifier = 22, RULE_enumerator_list = 23, 
		RULE_enumerator = 24, RULE_type_qualifier = 25, RULE_variable_declarator = 26, 
		RULE_variable_direct_declarator = 27, RULE_variable_declarator_suffix = 28, 
		RULE_function_direct_declarator = 29, RULE_pointer = 30, RULE_parameter_type_list = 31, 
		RULE_parameter_list = 32, RULE_parameter_declaration = 33, RULE_identifier_list = 34, 
		RULE_type_name = 35, RULE_abstract_declarator = 36, RULE_direct_abstract_declarator = 37, 
		RULE_abstract_declarator_suffix = 38, RULE_initializer = 39, RULE_initializer_list = 40, 
		RULE_argument_expression_list = 41, RULE_additive_expression = 42, RULE_multiplicative_expression = 43, 
		RULE_cast_expression = 44, RULE_unary_expression = 45, RULE_postfix_expression = 46, 
		RULE_unary_operator = 47, RULE_primary_expression = 48, RULE_constant = 49, 
		RULE_expression = 50, RULE_constant_expression = 51, RULE_assignment_expression = 52, 
		RULE_lvalue = 53, RULE_assignment_operator = 54, RULE_conditional_expression = 55, 
		RULE_logical_or_expression = 56, RULE_logical_and_expression = 57, RULE_inclusive_or_expression = 58, 
		RULE_exclusive_or_expression = 59, RULE_and_expression = 60, RULE_equality_expression = 61, 
		RULE_relational_expression = 62, RULE_shift_expression = 63, RULE_statement = 64, 
		RULE_labeled_statement = 65, RULE_compound_statement = 66, RULE_statement_list = 67, 
		RULE_expression_statement = 68, RULE_selection_statement = 69, RULE_iteration_statement = 70, 
		RULE_jump_statement = 71, RULE_function_call_statement = 72;
	public static final String[] ruleNames = {
		"compilationUnit", "external_declaration", "function_definition", "preprocessor_directive", 
		"include", "header_file", "define", "declaration", "function_declaration", 
		"variable_declaration", "declaration_specifiers", "variable_init_declarator_list", 
		"init_declarator", "storage_class_specifier", "type_specifier", "struct_specifier", 
		"struct", "struct_declaration_list", "struct_declaration", "specifier_qualifier_list", 
		"struct_declarator_list", "struct_declarator", "enum_specifier", "enumerator_list", 
		"enumerator", "type_qualifier", "variable_declarator", "variable_direct_declarator", 
		"variable_declarator_suffix", "function_direct_declarator", "pointer", 
		"parameter_type_list", "parameter_list", "parameter_declaration", "identifier_list", 
		"type_name", "abstract_declarator", "direct_abstract_declarator", "abstract_declarator_suffix", 
		"initializer", "initializer_list", "argument_expression_list", "additive_expression", 
		"multiplicative_expression", "cast_expression", "unary_expression", "postfix_expression", 
		"unary_operator", "primary_expression", "constant", "expression", "constant_expression", 
		"assignment_expression", "lvalue", "assignment_operator", "conditional_expression", 
		"logical_or_expression", "logical_and_expression", "inclusive_or_expression", 
		"exclusive_or_expression", "and_expression", "equality_expression", "relational_expression", 
		"shift_expression", "statement", "labeled_statement", "compound_statement", 
		"statement_list", "expression_statement", "selection_statement", "iteration_statement", 
		"jump_statement", "function_call_statement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'#include'", "'<'", "'>'", "'\"'", "'.h'", "'#define'", "';'", 
		"','", "'='", "'extern'", "'static'", "'auto'", "'register'", "'void'", 
		"'char'", "'short'", "'int'", "'long'", "'float'", "'double'", "'signed'", 
		"'unsigned'", "'{'", "'}'", "'struct'", "':'", "'enum'", "'const'", "'volatile'", 
		"'['", "']'", "'('", "')'", "'*'", "'...'", "'+'", "'-'", "'/'", "'%'", 
		"'++'", "'--'", "'sizeof'", "'.'", "'->'", "'&'", "'~'", "'!'", "'*='", 
		"'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='", 
		"'?'", "'||'", "'&&'", "'|'", "'^'", "'=='", "'!='", "'<='", "'>='", "'<<'", 
		"'>>'", "'case'", "'default'", "'if'", "'else'", "'switch'", "'while'", 
		"'do'", "'for'", "'continue'", "'break'", "'return'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "IDENTIFIER", "CHARACTER_LITERAL", 
		"STRING_LITERAL", "HEX_LITERAL", "DECIMAL_LITERAL", "OCTAL_LITERAL", "FLOATING_POINT_LITERAL", 
		"WS", "LINE_COMMENT", "BLOCK_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "C2asm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public C2asmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CompilationUnitContext extends ParserRuleContext {
		public List<Preprocessor_directiveContext> preprocessor_directive() {
			return getRuleContexts(Preprocessor_directiveContext.class);
		}
		public Preprocessor_directiveContext preprocessor_directive(int i) {
			return getRuleContext(Preprocessor_directiveContext.class,i);
		}
		public List<External_declarationContext> external_declaration() {
			return getRuleContexts(External_declarationContext.class);
		}
		public External_declarationContext external_declaration(int i) {
			return getRuleContext(External_declarationContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).exitCompilationUnit(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__5) {
				{
				{
				setState(146);
				preprocessor_directive();
				}
				}
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(153); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(152);
				external_declaration();
				}
				}
				setState(155); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__24) | (1L << T__26) | (1L << T__27) | (1L << T__28))) != 0) || _la==IDENTIFIER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class External_declarationContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public External_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_external_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).enterExternal_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).exitExternal_declaration(this);
		}
	}

	public final External_declarationContext external_declaration() throws RecognitionException {
		External_declarationContext _localctx = new External_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_external_declaration);
		try {
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				function_definition();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_definitionContext extends ParserRuleContext {
		public Declaration_specifiersContext declaration_specifiers() {
			return getRuleContext(Declaration_specifiersContext.class,0);
		}
		public Function_direct_declaratorContext function_direct_declarator() {
			return getRuleContext(Function_direct_declaratorContext.class,0);
		}
		public Compound_statementContext compound_statement() {
			return getRuleContext(Compound_statementContext.class,0);
		}
		public Function_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).enterFunction_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).exitFunction_definition(this);
		}
	}

	public final Function_definitionContext function_definition() throws RecognitionException {
		Function_definitionContext _localctx = new Function_definitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			declaration_specifiers();
			setState(162);
			function_direct_declarator();
			setState(163);
			compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Preprocessor_directiveContext extends ParserRuleContext {
		public IncludeContext include() {
			return getRuleContext(IncludeContext.class,0);
		}
		public DefineContext define() {
			return getRuleContext(DefineContext.class,0);
		}
		public Preprocessor_directiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preprocessor_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).enterPreprocessor_directive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).exitPreprocessor_directive(this);
		}
	}

	public final Preprocessor_directiveContext preprocessor_directive() throws RecognitionException {
		Preprocessor_directiveContext _localctx = new Preprocessor_directiveContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_preprocessor_directive);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(165);
				include();
				}
				break;
			case T__5:
				{
				setState(166);
				define();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeContext extends ParserRuleContext {
		public Header_fileContext header_file() {
			return getRuleContext(Header_fileContext.class,0);
		}
		public IncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).enterInclude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).exitInclude(this);
		}
	}

	public final IncludeContext include() throws RecognitionException {
		IncludeContext _localctx = new IncludeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_include);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			match(T__0);
			setState(178);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				{
				setState(170);
				match(T__1);
				setState(171);
				header_file();
				setState(172);
				match(T__2);
				}
				break;
			case T__3:
				{
				setState(174);
				match(T__3);
				setState(175);
				header_file();
				setState(176);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Header_fileContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(C2asmParser.IDENTIFIER, 0); }
		public Header_fileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).enterHeader_file(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).exitHeader_file(this);
		}
	}

	public final Header_fileContext header_file() throws RecognitionException {
		Header_fileContext _localctx = new Header_fileContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_header_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(IDENTIFIER);
			setState(181);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(C2asmParser.IDENTIFIER, 0); }
		public TerminalNode DECIMAL_LITERAL() { return getToken(C2asmParser.DECIMAL_LITERAL, 0); }
		public DefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).enterDefine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).exitDefine(this);
		}
	}

	public final DefineContext define() throws RecognitionException {
		DefineContext _localctx = new DefineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_define);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			match(T__5);
			setState(184);
			match(IDENTIFIER);
			setState(185);
			match(DECIMAL_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public Variable_declarationContext variable_declaration() {
			return getRuleContext(Variable_declarationContext.class,0);
		}
		public Function_declarationContext function_declaration() {
			return getRuleContext(Function_declarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declaration);
		try {
			setState(189);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(187);
				variable_declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(188);
				function_declaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_declarationContext extends ParserRuleContext {
		public Declaration_specifiersContext declaration_specifiers() {
			return getRuleContext(Declaration_specifiersContext.class,0);
		}
		public Function_direct_declaratorContext function_direct_declarator() {
			return getRuleContext(Function_direct_declaratorContext.class,0);
		}
		public Function_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).enterFunction_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).exitFunction_declaration(this);
		}
	}

	public final Function_declarationContext function_declaration() throws RecognitionException {
		Function_declarationContext _localctx = new Function_declarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_function_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			declaration_specifiers();
			setState(192);
			function_direct_declarator();
			setState(193);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_declarationContext extends ParserRuleContext {
		public Declaration_specifiersContext declaration_specifiers() {
			return getRuleContext(Declaration_specifiersContext.class,0);
		}
		public Variable_init_declarator_listContext variable_init_declarator_list() {
			return getRuleContext(Variable_init_declarator_listContext.class,0);
		}
		public Variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).enterVariable_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C2asmListener ) ((C2asmListener)listener).exitVariable_declaration(this);
		}
	}
